wiki/src/local.css
/* ... */
#pagebody .floating-toggleable div.toggleable {
  display: none;
  background: white;
  border: 5px solid var(--medium-dark-green);
  border-radius: 15px;
  padding: 30px 30px 15px 30px;
  margin: 0;
  position: absolute;
  text-align: left;
  z-index: 1;
  width: 37em;
}

#pagebody .floating-toggleable a.toggle {
  border: none !important;
  cursor: pointer;
  position: absolute;
  height: 30px;
  width: 30px;
  right: 5px;
  top: 5px;
  background: url('lib/close.png') no-repeat;
}

/* Icons */

div.icon {
  margin-bottom: 1.5em;
  position: relative;
}

div.icon img {
  display: inline-block;
}

div.icon div.text {
  position: absolute;
  top: 0;
  display: inline-block;
  vertical-align: top;
  margin-left: 1em;
}

/* Documentation styling */

span.application { font-style: italic; }
span.bold { font-weight: bold; }
span.code, span.command {
  font-family: "Source Code Pro Regular", "Courier", monospace;
  font-size: 15px;
  border: 1px solid var(--light-gray);
  padding-left: 0.2em;
  padding-right: 0.2em;
}
span.emphasis { font-style: italic; }
span.filename { font-style: italic; display: inline-block; }
span.guilabel { font-weight: bold; }
span.guimenu { font-weight: bold; }
span.guisubmenu { font-weight: bold; }
span.guimenuitem { font-weight: bold; }
span.keycap { font-weight: bold; }
span.menuchoice { font-weight: bold; }
span.replaceable { font-style: italic; }
div.bug, div.caution, div.next, div.note, div.tip, div.trophy, div.attack {
  background-color: var(--background-yellow);
  border: 1px solid var(--light-gray);
  border-radius: 5px;
  padding: 1.5em 6px 0em;
  background-position: 6px 0.5em;
  background-repeat: no-repeat;
  min-height: 48px;
  padding-left: 66px;
  margin: 30px 0;
  max-width: 52em;
}
div.bug {
  background-image: url(lib/admon-bug.png);
}
div.caution {
  background-image: url(lib/dialog-warning.png);
}
div.next {
  background-image: url(lib/go-next.png);
}
div.note {
  background-image: url(lib/admon-note.png);
}
div.tip {
  background-image: url(lib/admon-tip.png);
}
div.trophy {
  background-image: url(lib/trophy-gold.png);
}
div.attack {
  background-image: url(lib/weather-showers-scattered.png);
}

div.bug pre, div.caution pre, div.next pre, div.note pre, div.tip pre, div.trophy pre,
div.bug p.pre, div.caution p.pre, div.next p.pre, div.note p.pre, div.tip p.pre, div.trophy p.pre {
  width: 37em !important;
}

div.bug > *:first-child, div.caution > *:first-child, div.next > *:first-child, div.note > *:first-child, div.tip > *:first-child, div.trophy > *:first-child {
  margin-top: 0;
}

div.bug > *:last-child, div.caution > *:last-child, div.next > *:last-child, div.note > *:last-child, div.tip > *:last-child, div.trophy > *:last-child,
div.bug > *:only-child, div.caution > *:only-child, div.next > *:only-child, div.note > *:only-child, div.tip > *:only-child, div.trophy > *:only-child {
  margin-bottom: 1.5em;
}

/* Code, preformatted text, and command lines */

code {
  line-height: 18px;
  white-space: pre;
}

pre, p.pre {
  background-color: var(--background-gray);
  border: thin solid var(--medium-light-gray);
  border-radius: 5px;
  color: var(--dark-gray);
  margin: 1.5em 1em 1.5em 1.5em;
  padding: 0.25em 0.5em;
  max-width: 61em !important;
  width: 61em !important;
}

p.command-example, p.command-output {
  white-space: pre;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

span.command-placeholder {
  color: var(--red);
  font-style: italic;
  font-family: "Source Code Pro Regular", "Courier", monospace;
  font-weight: bold;
}

/* Inlined icons */

img.symbolic {
  display: inline-block;
  position: relative;
  top: 3px;
}

/* Highlight */

div#highlight {
  border: 5px solid var(--medium-purple);
  width: 44em;
  padding: 0.5em 1em;
  border-radius: 5px;
}
div#highlight p {
  margin: 0.5em 0;
}

/* Charts */

.chart {
  display: flex !important;
  flex-direction: column;
}

@media (min-width: 640px) {
  .chart {
    flex-direction: row;
  }
}

.chart-content, .chart-key {
  flex: 1;
  padding-left: 15px;
  padding-right: 15px;
  align-self: center;
}

.chart-content svg {
  height: auto;
}

.chart-key-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.chart-key-list li {
  margin: 0 0 8px;
  padding: 0;
  font-size: 14px;
  min-height: 3em;
}

.chart-key-list li div {
  display: inline-block;
}

.chart-key-list li p {
  margin: 5px 0 20px;
}

.key-label:before {
  content: " ";
  display: inline-block;
  vertical-align: top;
  width: 18px;
  height: 18px;
  position: relative;
  margin-left: -18px;
  left: -12px;
}

.key-label {
  margin-right: 8px;
}

.key-label, .key-percent {
  font-weight: bold;
}

.chart {
  /* Accessible color palette */
  --blue:     #5da5da;
  --orange:   #faa43a;
  --green:    #60bd68;
  --pink:     #f17cb0;
  --brown:    #b2912f;
  --purple:   #b276b2;
  --yellow:   #decf3f;

  /* Tails color palette */
  --purple-1: #7a478b;
  --purple-2: #9c6bad;
  --purple-3: #af97c7;
  --green-1:  var(--medium-light-green);
  --gray:     var(--light-gray);
}

.blue   .key-label:before { background-color: var(--blue); }
.orange .key-label:before { background-color: var(--orange); }
.green  .key-label:before { background-color: var(--green); }
.pink   .key-label:before { background-color: var(--pink); }
.brown  .key-label:before { background-color: var(--brown); }
.purple .key-label:before { background-color: var(--purple); }
.yellow .key-label:before { background-color: var(--yellow); }


.purple-1 .key-label:before { background-color: var(--purple-1); }
.purple-2 .key-label:before { background-color: var(--purple-2); }
.purple-3 .key-label:before { background-color: var(--purple-3); }
.green-1  .key-label:before { background-color: var(--green-1); }
.gray     .key-label:before { background-color: var(--gray); }

.embedded {
  display: none;
}
/* ... */

